--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,12 +128,11 @@
     </div>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
         <% @items.each do |item| %>
       <li class='list'>
         <%= link_to '#' do %>
         <div class='item-img-content'>
-            <%= image_tag "item-sample.png", class: "item-img" %>
+             <%= image_tag item.image.variant(resize: '500x500'), class: 'item-image' if item.image.attached? %>
           <%# 商品が売れていればsold outを表示しましょう %>
           <%# if item.order.present? %> 
             <div class='sold-out'>
